--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "fsevents",
-  "version": "2.1.3",
+  "version": "2.1.4",
   "description": "Native Access to MacOS FSEvents",
   "main": "fsevents.js",
   "types": "fsevents.d.ts",
@@ -19,6 +19,7 @@
     "clean": "node-gyp clean && rm -f fsevents.node",
     "build": "node-gyp clean && rm -f fsevents.node && node-gyp rebuild && node-gyp clean",
     "test": "/bin/bash ./test.sh 2>/dev/null",
+    "pack-universal": "lipo fsevents.x64.node fsevents.arm64.node -create -output fsevents.node",
     "prepublishOnly": "npm run build"
   },
   "repository": {
